Added the first version of Broadcast Form

--- a/callmgr/ui/html/createGroup.html
+++ b/callmgr/ui/html/createGroup.html
@@ -42,5 +42,6 @@
                        <td colspan="2" align="center">                    
                                <button type="submit">Submit</button>
                              </td>
-                         </tr>        
+                     </tr>
+             </table>        
 </html>
