--- a/callmgr/ui/html/libtechUploadAudioForm.html
+++ b/callmgr/ui/html/libtechUploadAudioForm.html
@@ -11,7 +11,7 @@
                 <form action="./../php/libtechAudioUpload.php" method="post" enctype="multipart/form-data">
                             Select File to upload:
                                 <input type="file" name="fileToUpload" id="fileToUpload">
-                                    <input type="submit" value="Upload Image" name="submit">
+                                    <input type="submit" value="Upload File" name="submit">
                             </form>
 
                     </body>
