--- a/callmgr/ui/html/broadcastsMain.html
+++ b/callmgr/ui/html/broadcastsMain.html
@@ -47,7 +47,7 @@
                                   <li><a href="./libtechUploadAudioForm.html"> Upload Audio to Libtech System </a></li>
                                   <li><a href="http://tringo.in"> Upload Audio to Tringo System </a></li>
                                   <li><a href="./../php/allAudio.php"> List of Audio files on Libtech System </a></li>
-                                  <li><a href="./../php/createBroadcast.php"> Fill Create Broadcast Form</a></li>
+                                  <li><a href="./../php/createBroadcasts.php"> Fill Create Broadcast Form</a></li>
                           </ul>
                   </td>
           </tr>
