Changed the path of Broadcast Reports

--- a/callmgr/ui/html/broadcastsMain.html
+++ b/callmgr/ui/html/broadcastsMain.html
@@ -49,7 +49,7 @@
                                   <li><a href="./../php/allAudio.php"> List of Audio files on Libtech System </a></li>
                                   <li><a href="./../php/createBroadcasts.php"> Fill Create Broadcast Form</a></li>
                                   <li><a href="./../python/approveBroadcast.py"> Approve Broadcast</a></li>
-                                  <li><a href="/reports/broadcasts/">Broadcast Reports</a></li>
+                                  <li><a href="/broadcasts/reports/broadcasts/">Broadcast Reports</a></li>
                           </ul>
                   </td>
           </tr>
