Gave link to Query Dash board

--- a/callmgr/ui/html/broadcastsMain.html
+++ b/callmgr/ui/html/broadcastsMain.html
@@ -50,6 +50,7 @@
                                   <li><a href="./../php/createBroadcasts.php"> Fill Create Broadcast Form</a></li>
                                   <li><a href="./../python/approveBroadcast.py"> Approve Broadcast</a></li>
                                   <li><a href="./../python/latestBroadcasts.py">Broadcast Reports</a></li>
+                                  <li><a href="./../python/queryDashboard.py">Query Dashboard</a></li>
                           </ul>
                   </td>
           </tr>
