--- a/callmgr/ui/html/libtechUploadAudioForm.html
+++ b/callmgr/ui/html/libtechUploadAudioForm.html
@@ -8,7 +8,7 @@
          <h1>File Upload Page</h1>
          <h4>Please note that you can upload only wav file. If you have file in any other format please convert it to wav. You can do this with Audacity software, or you can do it online by going to site <a href="http://media.io"> media.io</a></h4>
 
-                <form action="./../php/libtechAudioUpload.php" method="post" enctype="multipart/form-data">
+                <form action="./../php/libtechAudioUpload1.php" method="post" enctype="multipart/form-data">
                             Select File to upload:
                                 <input type="file" name="fileToUpload" id="fileToUpload">
                                     <input type="submit" value="Upload File" name="submit">
