--- a/callmgr/ui/html/broadcastsMain.html
+++ b/callmgr/ui/html/broadcastsMain.html
@@ -29,15 +29,15 @@
                                           <li>Do it through the audacity software.</li>
                                           <li>Do it online by going to <a href="http://media.io"> media.io</a></li>
                                   </ul>
-                                  </br>For some technical incompability between multiple vendors we use for Broadcast, you are required to upload the audio file in two places. (It is work in progress to fix this). You would need to upload audio to following two places. 
-                                  <ul>
-                                          <li>Libtech System</li>
-                                          <li>Tringo System</a></li>
-                          </ul>
                                   Once you will upload the audio file you will get the file ID from both the places. You need to fill the fileid in the next step`
                                   </li>
                                   <li><b> Fill the create Broadcast Form</b> </br> Once you have done the above you can create the broadcast, by filling the form. You would have to fill various details, such as startDate, endDate and various other parameters of Broadcast.
                                   </li>
+                                  <li><b> Place a test Call to your phone number</b> </br> Follow the approve broadcast link and place a test call to your number. If you get a test call and it is satisfactory approve the Broadcast. 
+                                  </li>
+                                  <li><b> Check Broadcast Reports</b> </br>Once approved, now you can periodically check the Broadcast Report to ensure that your calls are going. Once the broadcast is finished you can download the reports and analyze them.  
+                                  </li>
+                                </ol>
                                 </ol>
                   </td>
                   <td valign="top">
@@ -45,7 +45,6 @@
                                   <li><a href="./createGroup.html"> Create or Edit Groups </a></li>
                                   <li><a href="./../php/allGroups.php"> List of existing Groups </a></li>
                                   <li><a href="./libtechUploadAudioForm.html"> Upload Audio to Libtech System </a></li>
-                                  <li><a href="http://tringo.in"> Upload Audio to Tringo System </a></li>
                                   <li><a href="./../php/allAudio.php"> List of Audio files on Libtech System </a></li>
                                   <li><a href="./../php/createBroadcasts.php"> Fill Create Broadcast Form</a></li>
                                   <li><a href="./../python/approveBroadcast.py"> Approve Broadcast</a></li>
