--- a/libtech/src/pages/panchayats/panchayats.html
+++ b/libtech/src/pages/panchayats/panchayats.html
@@ -16,7 +16,7 @@
 
 
 <ion-content padding>
-  <p *ngFor="let panchayat of panchayats"><button ion-button (click)="gotoJobcardsPage(panchayat.panchayatName)"> {{ panchayat.panchayatName }}</button></p>
+  <p *ngFor="let panchayat of panchayats"><button ion-button [navPush]="jobcardsPage" [navParams]="{panchayatName: panchayat.panchayatName}"> {{ panchayat.panchayatName }}</button></p>
 </ion-content>
 
 <ion-footer>
