--- a/libtech/src/pages/transactions/transactions.html
+++ b/libtech/src/pages/transactions/transactions.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the Transactions page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>Transactions for Jobcard[{{ jobcard }}]</ion-title>
@@ -14,7 +8,7 @@
 
 
 <ion-content padding>
-  <p *ngFor="let item of transactions | async"><button ion-button [navPush]="transactionPage" [navParams]="{ jobcard: jobcard, date: item.$key, transaction: item[1] }">{{ item.$key }}</button></p>
+  <p *ngFor="let item of transactions | async"><button ion-button [navPush]="transactionPage" [navParams]="{ jobcard: jobcard, date: item.$key, transaction: item[1], url: url }">{{ item.$key }} mynk {{ url }}</button></p>
 </ion-content>
 
 <ion-footer>
