Added login functionality. Need to limit access next

--- a/libtech/src/pages/home/home.html
+++ b/libtech/src/pages/home/home.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-  <p>The place holder for Login/Signup or do we want jobcards and transactions as parallel pages?</p>
-  <button ion-button [navPush]="panchayatsPage" [navParams]="panchayats">Panchayats</button>  
+  <h1>Field Reports App</h1>
+  <p>Please select the panchayats you wish to follow</p>
+  <button ion-button [navPush]="panchayatsPage" [navParams]="panchayats">Panchayats</button>
 </ion-content>
