--- a/libtech/src/pages/login/login.html
+++ b/libtech/src/pages/login/login.html
@@ -9,8 +9,10 @@
 
 <ion-content padding>
   <form>
-    <ion-input type="text" name="email" [(ngModel)]="email" placeholder="email"></ion-input>
-    <ion-input type="password" name="password" [(ngModel)]="password" placeholder="password"></ion-input>
+    <ion-input type="email" name="email" [(ngModel)]="email" placeholder="Email"></ion-input>
+    <ion-input type="password" name="password" [(ngModel)]="password" placeholder="Password"></ion-input>
     <button ion-button round block (click)="login()">Login</button>
+    <button ion-button round block (click)="loginWithGoogle()">Login with Google</button>
+    <button ion-button round block (click)="loginWithFacebook()">Login with Facebook</button>
   </form>
 </ion-content>
