--- a/libtech/src/pages/home/home.html
+++ b/libtech/src/pages/home/home.html
@@ -8,6 +8,27 @@
 
 <ion-content padding>
   <h1>Field Reports App</h1>
-  <p>Please select the panchayats you wish to follow</p>
-  <button ion-button [navPush]="panchayatsPage" [navParams]="panchayats">Panchayats</button>
+  {{ welcomeMessage }} 
+  <div *ngIf="isLoggedIn()">
+    <ion-item>
+      <ion-avatar item-left *ngIf="user.picture">
+	<img [src]="user.picture">
+      </ion-avatar>
+      <h2>{{ user.email }}</h2>
+      <ion-icon name="arrow-forward" item-right></ion-icon>
+    </ion-item>
+    <!-- <ion-item>{{ user.email }} </ion-item> -->
+
+    <ion-searchbar (input)="search($event)"></ion-searchbar>
+
+      <p>Please select the panchayats you wish to follow:</p>
+      <ion-list>
+	<ion-item *ngFor="let panchayat of panchayats; let i = index"> <input type="checkbox" [checked]="panchayatSelected[i]"><button ion-button (click)="gotoPanchayat(selectPanchayat, i, panchayat)" #selectPanchayat>{{ panchayat }}</button></ion-item>
+      </ion-list>  
+
+    <button ion-button [navPush]="panchayatsPage" [navParams]="panchayats">Panchayats</button>
+  </div>
 </ion-content>
+<ion-footer>
+<!--  <button ion-button round (click)="logout()">Logout</button> -->
+</ion-footer>
