Adding check boxes to select the panchayats to view or sync

--- a/ionic/fieldApp/src/pages/home/home.html
+++ b/ionic/fieldApp/src/pages/home/home.html
@@ -24,12 +24,17 @@
     <ion-searchbar (input)="search($event)"></ion-searchbar>
 
       <p>Please select the panchayats you wish to follow:</p>
+
       <ion-list>
-	<ion-item *ngFor="let panchayat of panchayats; let i = index"> <input type="checkbox" [checked]="panchayatSelected[i]"><button ion-button (click)="gotoPanchayat(selectPanchayat, i, panchayat)" #selectPanchayat>{{ panchayat }}</button></ion-item>
-      </ion-list>  
+	<ion-item *ngFor="let panchayat of panchayats; let i = index"> <input type="checkbox" [checked]="panchayatSelected[i]"><button ion-button (click)="gotoPanchayat(selectPanchayat, i, panchayat.panchayatName)" #selectPanchayat>{{ panchayat.panchayatName }}</button></ion-item>
+      <p *ngFor="let panchayat of panchayats"> <input type="checkbox" [checked]="panchayatSelected[panchayat.panchayatName]"><button ion-button (click)="choosePanchayat(selectPanchayat, panchayat.panchayatName, panchayat)" #selectPanchayat>{{ panchayat.panchayatName }}</button></p>
+      </ion-list>
       -->
-    
-    <button ion-button [navPush]="panchayatsPage" [navParams]="panchayats">Panchayats</button>
+      <p>Please select the panchayats you wish to sync</p>
+      <p *ngFor="let panchayat of panchayats"  (click)="choosePanchayat(selectPanchayat, panchayat.panchayatName, panchayat)"> <input type="checkbox" [checked]="panchayatSelected[panchayat.panchayatName]"><button ion-button #selectPanchayat>{{ panchayat.panchayatName }}</button></p>
+
+    <button ion-button (click)="syncPanchayats()">Sync</button>
+    <button ion-button [navPush]="panchayatsPage" [navParams]="panchayatsChosen">View</button>
   </div>
 </ion-content>
 <ion-footer>
