--- a/ionic/fieldApp/src/pages/jobcards/jobcards.html
+++ b/ionic/fieldApp/src/pages/jobcards/jobcards.html
@@ -7,17 +7,21 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Jobcards for Panchayat[{{ panchayatName }}]</ion-title>
+    <ion-item>
+      <ion-title item-left>Jobcards</ion-title>
+      <button ion-button item-right default (click)="goHome()">Home</button>
+    </ion-item>
   </ion-navbar>
-  <button ion-button navPop>Back</button>
-  <button ion-button (click)="goHome()">Home</button>
 </ion-header>
 
 <ion-content padding>
+  <h4>For Panchayat [{{ panchayatName }}]</h4>
   <p *ngFor="let item of jobcards | async"><button ion-button [navPush]="transactionsPage" [navParams]="{panchayatName: panchayatName, jobcardNumber: item.$key}">{{ item.$key }}</button></p>
 </ion-content>
 
 <ion-footer>
-  <button ion-button navPop>Back</button>
-  <button ion-button (click)="goHome()">Home</button>
+  <ion-item>
+    <button ion-button item-left default navPop>Back</button>
+    <button ion-button item-right default (click)="goHome()">Home</button>
+  </ion-item>
 </ion-footer>
