--- a/ionic/fieldApp/src/pages/panchayats/panchayats.html
+++ b/ionic/fieldApp/src/pages/panchayats/panchayats.html
@@ -1,10 +1,13 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Panchayats</ion-title>
+    <!--
+    <ion-item>
+      <ion-title item-left>Panchayats</ion-title>
+      <button ion-button item-right default (click)="goHome()">Home</button>
+    </ion-item>
+    -->
   </ion-navbar>
-
-  <button ion-button navPop>Back</button>
-  <button ion-button (click)="goHome()">Home</button>
 </ion-header>
 
 
@@ -13,6 +16,8 @@
 </ion-content>
 
 <ion-footer>
-  <button ion-button navPop>Back</button>
-  <button ion-button (click)="goHome()">Home</button>
+  <ion-item>
+    <button ion-button item-left default navPop>Back</button>
+    <button ion-button item-right default (click)="goHome()">Home</button>
+  </ion-item>
 </ion-footer>
