--- a/ionic/fieldApp/src/pages/transaction/transaction.html
+++ b/ionic/fieldApp/src/pages/transaction/transaction.html
@@ -1,39 +1,62 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Details for [Jobcard:{{ key }}]
-    </ion-title>
+    <ion-item>
+      <ion-title item-left>Transaction Details</ion-title>
+      <button ion-button item-right default (click)="goHome()">Home</button>
+    </ion-item>
   </ion-navbar>
-
-  <button ion-button navPop>Back</button>
-  <button ion-button (click)="goHome()">Home</button>
 </ion-header>
 
 
 <ion-content padding>
-<p><b>Jobcard Number</b>:    {{transaction['jobcard']}}</p>
-<p><b>Worker Name</b>:    {{transaction['name']}}</p>
-<p><b>Muster No.</b>:    {{transaction['musterNo']}}</p>
-<p><b>Work Name</b>:    {{transaction['workName']}}</p>
-<p><b>Total Wage</b>:    {{transaction['totalWage']}}</p>
-<p><b>Wagelist No.</b>:    {{transaction['wagelistNo']}}</p>
-<p><b>FTO No.</b>:    {{transaction['ftoNo']}}</p>
-<p><b>Muster status</b>:    {{transaction['musterStatus']}}</p>
-<p><b>Bank or Post Office Name</b>:    {{transaction['bankNameOrPOName']}}</p>
-<p><b>Muster close date</b>:    {{transaction['dateTo']}}</p>
-<p><b>First signatory date</b>:    {{transaction['firstSignatoryDate']}}</p>
-<p><b>Second signatory date</b>:    {{transaction['secondSignatoryDate']}}</p>
-<p><b>Transaction date</b>:    {{transaction['transactionDate']}}</p>
-<p><b>Bank processed date</b>:    {{transaction['bankProcessedDate']}}</p>
-<p><b>Payment date</b>:    {{transaction['paymentDate']}}</p>
-<p><b>Credited date</b>:    {{transaction['creditedDate']}}</p>
-<p><b>FTO Status</b>:    {{transaction['ftoStatus']}}</p>
-<p><b>Reason for rejection (if rejected)</b>:    {{transaction['rejectionReason']}}</p>
-<p><b>Remarks:</b> <input #remarkInput type="textarea" placeholder="{{ transaction['remarks'] }}" (input)="remarks=remarkInput.value; updated=false"> {{ remarks }}</p>
-<p><b>Create Complaint:</b><input #complaintBox type="checkbox" (change)="createComplaint = complaintBox.checked; updated=false" [checked]="transaction['createComplaint']"></p>
-<p><button ion-button [disabled]="updated" (click)=update()>Update</button></p>
+  <h4>For [{{ key }}]</h4>
+  
+  <p><b>Jobcard Number</b>:    {{transaction['jobcard']}}</p>
+  <p><b>Worker Name</b>:    {{transaction['name']}}</p>
+  <p><b>Muster No.</b>:    {{transaction['musterNo']}}</p>
+  <p><b>Work Name</b>:    {{transaction['workName']}}</p>
+  <p><b>Total Wage</b>:    {{transaction['totalWage']}}</p>
+  <p><b>Wagelist No.</b>:    {{transaction['wagelistNo']}}</p>
+  <p><b>FTO No.</b>:    {{transaction['ftoNo']}}</p>
+  <p><b>Muster status</b>:    {{transaction['musterStatus']}}</p>
+  <p><b>Bank or Post Office Name</b>:    {{transaction['bankNameOrPOName']}}</p>
+  <p><b>Muster close date</b>:    {{transaction['dateTo']}}</p>
+  <p><b>First signatory date</b>:    {{transaction['firstSignatoryDate']}}</p>
+  <p><b>Second signatory date</b>:    {{transaction['secondSignatoryDate']}}</p>
+  <p><b>Transaction date</b>:    {{transaction['transactionDate']}}</p>
+  <p><b>Bank processed date</b>:    {{transaction['bankProcessedDate']}}</p>
+  <p><b>Payment date</b>:    {{transaction['paymentDate']}}</p>
+  <p><b>Credited date</b>:    {{transaction['creditedDate']}}</p>
+  <p><b>FTO Status</b>:    {{transaction['ftoStatus']}}</p>
+  <p><b>Reason for rejection (if rejected)</b>:    {{transaction['rejectionReason']}}</p>
+  <p><b>Remarks:</b> <input #remarkInput type="textarea" placeholder="{{ transaction['remarks'] }}" (input)="remarks=remarkInput.value; updated=false"> {{ remarks }}</p>
+  <p><b>Create Complaint:</b><input #complaintBox type="checkbox" (change)="createComplaint = complaintBox.checked; updated=false" [checked]="transaction['createComplaint']"></p>
+  <p><button ion-button [disabled]="updated" (click)=update()>Update</button></p>
+  
+  <!-- To give padding at the bottom (FIXME) -->
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
 </ion-content>
 
 <ion-footer>
-  <button ion-button navPop>Back</button>
-  <button ion-button (click)="goHome()">Home</button>
+  <ion-item>
+    <button ion-button item-left default navPop>Back</button>
+    <button ion-button item-right default (click)="goHome()">Home</button>
+  </ion-item>
 </ion-footer>
