--- a/ionic/fieldApp/src/pages/transactions/transactions.html
+++ b/ionic/fieldApp/src/pages/transactions/transactions.html
@@ -1,12 +1,14 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Transactions for [{{ jobcard }}]</ion-title>
+    <ion-item>
+      <ion-title item-left>Transactions</ion-title>
+      <button ion-button item-right default (click)="goHome()">Home</button>
+    </ion-item>
   </ion-navbar>
-  <button ion-button navPop>Back</button>
-  <button ion-button (click)="goHome()">Home</button>
 </ion-header>
 
 <ion-content padding>
+  <h4>For Jobcard[{{ jobcard }}]</h4>
   <span *ngFor="let item of items | async">
     <p>
       <span *ngIf="item">
@@ -17,6 +19,8 @@
 </ion-content>
 
 <ion-footer>
-  <button ion-button navPop>Back</button>
-  <button ion-button (click)="goHome()">Home</button>
+  <ion-item>
+    <button ion-button item-left default navPop>Back</button>
+    <button ion-button item-right default (click)="goHome()">Home</button>
+  </ion-item>
 </ion-footer>
