--- a/ionic/fieldApp/src/pages/profile/profile.html
+++ b/ionic/fieldApp/src/pages/profile/profile.html
@@ -1,18 +1,20 @@
-<!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>profile</ion-title>
+    <ion-item>
+      <ion-title item-left>Profile for {{ user }} </ion-title>
+      <button ion-button item-right default (click)="goHome()">Home</button>
+    </ion-item>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
 
 </ion-content>
+
+<ion-footer>
+  <ion-item>
+    <button ion-button item-left default navPop>Back</button>
+    <button ion-button item-right default (click)="goHome()">Home</button>
+  </ion-item>
+</ion-footer>
