Fixed the race during login and cleaned up the code

--- a/ionic/fieldApp/src/pages/home/home.html
+++ b/ionic/fieldApp/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <ion-item>
       <ion-title item-left>Field Reports App</ion-title>
       <button ion-button item-right default [navPush]="profilePage"
-              [navParams]="user">Profile</button>
+              [navParams]="getUser()">Profile</button>
     </ion-item>
   </ion-navbar>
 </ion-header>
