--- a/ionic/fieldApp/src/pages/jobcards/jobcards.html
+++ b/ionic/fieldApp/src/pages/jobcards/jobcards.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the Jobcards page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -15,8 +9,10 @@
 </ion-header>
 
 <ion-content padding>
-  <h4>For Panchayat [{{ panchayatName }}]</h4>
-  <p *ngFor="let item of jobcards | async"><button ion-button [navPush]="transactionsPage" [navParams]="{panchayatName: panchayatName, jobcardNumber: item.$key}">{{ item.$key }}</button></p>
+  <h4>For Panchayat [{{ panchayatSlug }}]</h4>
+  Total jobcards: {{ totalJobcards }} 
+  Total workers: {{ totalWorkers }}
+  <p *ngFor="let item of jobcards | async"><button ion-button [navPush]="transactionsPage" [navParams]="{panchayatSlug: item.slug, jobcardSlug: item.jobcardSlug}">{{ item.jobcardSlug }}</button></p>
 </ion-content>
 
 <ion-footer>
